[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Board.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Images/button/back.png" type="Texture" id=6]
[ext_resource path="res://Images/button/back-pressed.png" type="Texture" id=7]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Board" parent="." instance=ExtResource( 2 )]
position = Vector2( 358.749, 753 )

[node name="Level" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -10 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 277.671, 394.414 )
scale = Vector2( 2, 2 )

[node name="Enemy" parent="." instance=ExtResource( 5 )]
position = Vector2( 556.493, 328.68 )
scale = Vector2( 1.5, 1.5 )

[node name="SetupTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true

[node name="SetupTimer2" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
position = Vector2( 600, 17.333 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )
[connection signal="timeout" from="SetupTimer" to="." method="_on_SetupTimer_timeout"]
[connection signal="timeout" from="SetupTimer2" to="." method="_on_SetupTimer2_timeout"]
[connection signal="released" from="TouchScreenButton" to="." method="_on_TouchScreenButton_released"]
